--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
+    "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "nodemailer": "^6.10.1",
+    "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
