--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
     "prisma": "^5.22.0",
     "slugify": "^1.6.6",
