--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.10.1",
     "prisma": "^5.22.0",
     "slugify": "^1.6.6",
+    "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ws": "^8.18.3"
